feat: add token endpoints
